# pigeonhole

./: .cspell.json  Cargo.toml  cspell.json
src/: buf_reader.rs  crypto.rs  error.rs  file.rs  lib.rs  zeroize_allocator.rs
src/crypto/: ed25519.rs  mod.rs
src/crypto/aead/: aes_gcm.rs  mod.rs
src/crypto/aead/aes_gcm/: aes_gcm_encrypted_chunk.rs  aes_gcm_indexed_key.rs  aes_gcm_ratcheting_key.rs  aes_gcm_root_key.rs  mod.rs
src/crypto/asym/: ed25519.rs  mod.rs
test/: lorem_ipsum
