[package]
name = "pigeonhole"
version = "0.1.0"
authors = ["Matt Gibson <git@mgibson.dev>"]
edition = "2021"
description = "Encrypted file sync"
readme = "README.md"
repository = "https://github.com/mgibson1/pigeonhole"
license-file = "LICENSE"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = { version = "0.5.3", features = ["std", "zeroize"] }
ed25519-dalek-bip32 = "0.3.0"
rand = "0.8.5"
sha2 = "0.10.8"
sha256 = "1.5.0"
thiserror = "1.0.61"
zeroize = "1.8.1"
