[package]
name = "pigeonhole"
version = "0.1.0"
authors = ["Matt Gibson <git@mgibson.dev>"]
edition = "2021"
description = "Encrypted file sync"
readme = "README.md"
repository = "https://github.com/mgibson1/pigeonhole"
license-file = "LICENSE"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aead = { version = "0.5.2", features = ["std"] }
aes = { version = "0.8.4", features = ["zeroize"] }
aes-gcm = { version = "0.10.3", features = ["zeroize", "std"] }
argon2 = { version = "0.5.3", features = ["std", "zeroize"] }
chacha20poly1305 = "0.10.1"
ed25519-dalek-bip32 = "0.3.0"
hkdf = { version = "0.12.4", features = ["std"] }
hmac = "0.12.1"
rand = "0.8.5"
sha2 = "0.10.8"
sha256 = "1.5.0"
thiserror = "1.0.61"
uuid = { version = "1.10.0", features = ["v7"] }
zeroize = "1.8.1"
